--- a/AttendanceManage_kai01/pom.xml
+++ b/AttendanceManage_kai01/pom.xml
@@ -60,6 +60,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- 2024/11/25追加。ユニットテスト用？ -->
+		<!-- https://b1san-blog.com/post/java/java-junit -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.8.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
