--- a/AttendanceManage_kai01/pom.xml
+++ b/AttendanceManage_kai01/pom.xml
@@ -69,6 +69,13 @@
 			<version>5.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- 演習34 lombok インストールも行った（not検索、pom更新で案内が来る）-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
